[package]
name = "shuffle_sharding"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
dashmap = "5.5.3"
md5 = "0.7.0"
rand = { version = "*", features = ["small_rng"] }
rand_chacha = "0.3"
wyhash = "0.5.0"
tokio = { version = "1.37.0", features = ["full"] }
bitcode = { version = "0.6" }


[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
